# billing

./: .gitignore  Cargo.toml  README.md  TODO.md  justfile  mprocs.json  rustfmt.toml
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/token/: error.rs  mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-core/src/model/: error.rs  mod.rs
crates/libs/lib-core/src/model/bill/: mod.rs
crates/libs/lib-core/src/model/seller/: error.rs  mod.rs
crates/libs/lib-core/src/model/store/: mod.rs
crates/libs/lib-core/src/model/transaction/: error.rs  mod.rs
crates/libs/lib-core/src/model/user/: mod.rs
crates/libs/lib-hotreload/src/: config.rs
crates/libs/lib-hotreload/src/templates/: websocket.js
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: b58.rs  b64.rs  envs.rs  lib.rs  time.rs
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: config.rs  error.rs  lib.rs  tera.rs
crates/libs/lib-web/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/lib-web/src/ctx/: mod.rs
crates/libs/lib-web/src/extractors/: mod.rs
crates/libs/lib-web/src/handlers/: handlers_bill.rs  handlers_fallback.rs  handlers_login.rs  handlers_seller.rs  handlers_transaction.rs
crates/libs/lib-web/src/handlers/api/: handlers_seller.rs  mod.rs
crates/libs/lib-web/src/handlers/web/: mod.rs  seller.rs
crates/libs/lib-web/src/handlers/web/fragmant/: seller.rs
crates/libs/lib-web/src/log/: mod.rs
crates/libs/lib-web/src/middleware/: mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs
crates/libs/lib-web/src/model/: error.rs  mod.rs
crates/libs/lib-web/src/model/base/: mod.rs
crates/libs/lib-web/src/model/bill/: error.rs  mod.rs
crates/libs/lib-web/src/model/seller/: error.rs  mod.rs
crates/libs/lib-web/src/model/store/: mod.rs
crates/libs/lib-web/src/model/store/dbx/: mod.rs
crates/libs/lib-web/src/model/transaction/: mod.rs
crates/libs/lib-web/src/model/user/: error.rs  mod.rs
crates/libs/lib-web/src/renders/: mod.rs  seller.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs  register.rs
crates/services/web-server/src/: error.rs  lib.rs  main.rs  main_hot_reload.rs
crates/services/web-server/src/api/: mod.rs  routes_login.rs  routes_transaction.rs
crates/services/web-server/src/routes_api/: mod.rs  routes_login.rs  routes_transaction.rs
crates/services/web-server/src/routes_web/: mod.rs
crates/services/web-server/src/routes_web/routes_fragmant/: mod.rs
crates/tools/gen-key/: Cargo.toml
crates/tools/gen-key/src/: main.rs
crates/tools/gen-pass/: Cargo.toml
crates/tools/gen-pass/src/: main.rs
frontend/: biome.jsonc  input.css  package.json  tsconfig.json
frontend/src/: components.ts  login.ts  password.ts  register.ts  toasterTest.ts
frontend/src/hot-reload/: websocket.ts
frontend/src/lib/: error.ts  superposition.ts  toaster.ts
frontend/src/routes/: seller.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  helpers.ts  index.ts  logger.ts  signals.ts
frontend/static/js/: datastar.js  initialThemeLoad.js
frontend/templates/: head.html  home.html  home_1.html  login.html  login_1.html  navbar.html  register.html
frontend/templates/components/: toaster.html  toasterTest.html
frontend/templates/fragmants/: head.html
frontend/templates/fragmants/seller/: searchResult.html
frontend/templates/routes/: login.html  register.html  seller.html
hurl/: create_bill.hurl  create_seller.hurl  create_transactions.hurl  login.hurl  login_form.hurl  login_json.hurl  register_form.hurl  register_json.hurl
sql/dev_initial/: 00-recreate-db.sql  01-create-user-schema.sql  01-user-create-schema.sql  02-dev-seed-user.sql  03-dev-seed-user.sql  04-create-transaction-schema.sql  04-transaction-create-schema.sql  postgrestools.jsonc
