[package]
name = "lib-web"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-auth = { path = "../../libs/lib-auth" }
lib-utils = { path = "../../libs/lib-utils" }

# -- Async
# -- Web
axum = { workspace = true }
# -- Json
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
# -- Others
sqlx = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
# -- Async
tokio = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serial_test = "3"

[lints]
workspace = true
