[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
# -- Web
axum = { workspace = true }
lib-auth = { path = "../../libs/lib-auth" }
lib-core = { path = "../../libs/lib-core" }
lib-utils = { path = "../../libs/lib-utils" }
lib-web = { path = "../../libs/lib-web" }
# -- Json
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum_macros = { workspace = true }
# -- Others
time = { workspace = true }
thiserror = { workspace = true }
# -- Async
tokio = { workspace = true }
tower = "0.5"
tower-cookies = { workspace = true }
tower-http = { workspace = true }
# -- Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
httpc-test = "0.1"
